# python-vtzero

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  ci.yml
example/: __init__.py
tests/: test_fixtures.py  test_tile.py
vtzero/: __init__.py  cvtzero.pxd  tile.pyx  version.py
